--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                                 </div>
                                 <script>
                                     function fetchLeaveRequests() {
-                                        const leaveRequestsUrl = 'https://your-render-service.onrender.com/leave-requests'; // Endpoint to fetch leave requests
+                                        const leaveRequestsUrl = 'https://telegram-backend-m623.onrender.com/leave-requests'; // Endpoint to fetch leave requests
                             
                                         fetch(leaveRequestsUrl)
                                             .then(response => {
