--- a/index.html
+++ b/index.html
@@ -657,9 +657,11 @@
                                                 </th>
                                             </tr>
                                         </thead>
+                                        <div id='leave-request-container'>
                                             <tbody id="leaveTableBody" class="text-primary text-sm">
                                                 <!-- Leave requests will be dynamically populated here -->
                                             </tbody>
+                                        </div>
                                     </table>
                                 </div>
                                 <script>
