--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
                                                 </th>
                                             </tr>
                                         </thead>
-                                        <div id='leave-request-container'></div>
+                                        <div id='leave-requests-container'></div>
                                     </table>
                                 </div>
                                 <script>
