--- a/index.html
+++ b/index.html
@@ -657,7 +657,8 @@
                                                 </th>
                                             </tr>
                                         </thead>
-                                        <div id='leave-requests-container'></div>
+                                        <tbody class="text-primary text-sm">
+                                        </tbody>
                                     </table>
                                 </div>
                                 <script>
