--- a/index.html
+++ b/index.html
@@ -657,8 +657,10 @@
                                                 </th>
                                             </tr>
                                         </thead>
+                                        <div id='leave-requests-container'>
                                         <tbody class="text-primary text-sm">
                                         </tbody>
+                                        </div>
                                     </table>
                                 </div>
                                 <script>
