--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
                                                 </th>
                                             </tr>
                                         </thead>
-                                        <div id='leave-requests-container'>
+                                        <div id="leave-requests-container">
                                         <tbody class="text-primary text-sm">
                                         </tbody>
                                         </div>
