--- a/index.html
+++ b/index.html
@@ -599,71 +599,40 @@
                     </div>
 
                     <div class="table-responsive vtopTable trim col-sm-12">
-                        <div id="LeaveHistoryTable_wrapper" class="dataTables_wrapper form-inline dt-bootstrap no-footer">
-                            <div id="LeaveHistoryTable_filter" class="dataTables_filter">
-                                <label>Search:<input type="search" class="form-control input-sm" placeholder="" aria-controls="LeaveHistoryTable">
-                                </label>
-                            </div>
-                            <div class="dataTables_scroll">
-                                <div class="dataTables_scrollHead" style="overflow: hidden; position: relative; border: 0px; width: 100%;">
-                                    <div class="dataTables_scrollHeadInner" style="box-sizing: content-box; width: 1197.7px; padding-right: 0px;">
-                                        <table class="table table-striped table-bordered dataTable no-footer" tabindex="0" style="width: 1197.7px; padding: 0px; margin: 0px; overflow: auto;">
-                                            <thead>
-                                                <tr class="text-danger" style="font-weight:bold">
-                                                    <th style="width: 0px;" class="sorting sorting_asc" tabindex="0" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1" aria-sort="ascending" aria-label=": activate to sort column descending"></th>
-                                                    <th style="width: 45.8125px; font-size:75%; " class="text-center text-nowrap sorting" tabindex="0" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1" aria-label="Leave Id: activate to sort column ascending">Leave Id</th>
-                                                    <th style="width: 55.2188px; font-size:75%;  " class="text-center text-nowrap sorting" tabindex="0" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1" aria-label="Visit Place: activate to sort column ascending">Visit Place</th>
-                                                    <th style="width: 75.8438px; font-size:75%;  " class="text-center text-nowrap sorting" tabindex="0" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1" aria-label="Reason: activate to sort column ascending" style="font-family: Arial, Helvetica, sans-serif">Reason</th>
-                                                    <th style="width: 75.4062px; font-size:75%;  " class="text-center text-nowrap sorting" tabindex="0" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1" aria-label="LeaveType: activate to sort column ascending">LeaveType</th>
-                                                    <th style="width: 110.656px; font-size:75%;  " class="text-center text-nowrap sorting" tabindex="0" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1" aria-label="From: activate to sort column ascending">From</th>
-                                                    <th style="width: 110.656px; font-size:75%;  " class="text-center text-nowrap sorting" tabindex="0" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1" aria-label="To: activate to sort column ascending">To</th>
-                                                    <th style="width: 211.688px; font-size:75%;  " class="text-center text-nowrap sorting" tabindex="0" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1" aria-label="Status: activate to sort column ascending">Status</th>
-                                                    <th style="width: 186.422px; font-size:75%; " class="text-center text-nowrap sorting" tabindex="0" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1" aria-label="Remarks: activate to sort column ascending">Remarks</th>
-                                                </tr>
-                                            </thead>
-                                        </table>
-                                    </div>
-                                </div>
-                                <div class="dataTables_scrollBody" style="position: relative; overflow: auto; width: 100%;">
-                                    <table id="LeaveHistoryTable" class="table table-striped table-bordered dataTable no-footer" tabindex="0" style="width: 100%;padding:0px;margin:0px;overflow:auto" aria-describedby="LeaveHistoryTable_info">
-                                        <thead>
-                                            <tr class="text-danger" style="font-weight: bold; height: 0px;">
-                                                <th style="padding-top: 0px; padding-bottom: 0px; border-top-width: 0px; border-bottom-width: 0px; height: 0px; width: 0px;" class="sorting" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1">
-                                                    <div class="dataTables_sizing" style="height: 0px; overflow: hidden;"></div>
-                                                </th>
-                                                <th style="padding-top: 0px; padding-bottom: 0px; border-top-width: 0px; border-bottom-width: 0px; height: 0px; width: 45.8125px;" class="text-center text-nowrap sorting" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1">
-                                                    <div class="dataTables_sizing" style="height: 0px; overflow: hidden;">Leave Id</div>
-                                                </th>
-                                                <th style="padding-top: 0px; padding-bottom: 0px; border-top-width: 0px; border-bottom-width: 0px; height: 0px; width: 55.2188px;" class="text-center text-nowrap sorting" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1">
-                                                    <div class="dataTables_sizing" style="height: 0px; overflow: hidden;">Visit Place</div>
-                                                </th>
-                                                <th style="padding-top: 0px; padding-bottom: 0px; border-top-width: 0px; border-bottom-width: 0px; height: 0px; width: 75.8438px;" class="text-center text-nowrap sorting" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1">
-                                                    <div class="dataTables_sizing" style="height: 0px; overflow: hidden;">Reason</div>
-                                                </th>
-                                                <th style="padding-top: 0px; padding-bottom: 0px; border-top-width: 0px; border-bottom-width: 0px; height: 0px; width: 75.4062px;" class="text-center text-nowrap sorting" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1">
-                                                    <div class="dataTables_sizing" style="height: 0px; overflow: hidden;">LeaveType</div>
-                                                </th>
-                                                <th style="padding-top: 0px; padding-bottom: 0px; border-top-width: 0px; border-bottom-width: 0px; height: 0px; width: 110.656px;" class="text-center text-nowrap sorting" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1">
-                                                    <div class="dataTables_sizing" style="height: 0px; overflow: hidden;">From</div>
-                                                </th>
-                                                <th style="padding-top: 0px; padding-bottom: 0px; border-top-width: 0px; border-bottom-width: 0px; height: 0px; width: 110.656px;" class="text-center text-nowrap sorting" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1">
-                                                    <div class="dataTables_sizing" style="height: 0px; overflow: hidden;">To</div>
-                                                </th>
-                                                <th style="padding-top: 0px; padding-bottom: 0px; border-top-width: 0px; border-bottom-width: 0px; height: 0px; width: 211.688px;" class="text-center text-nowrap sorting" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1">
-                                                    <div class="dataTables_sizing" style="height: 0px; overflow: hidden;">Status</div>
-                                                </th>
-                                                <th style="padding-top: 0px; padding-bottom: 0px; border-top-width: 0px; border-bottom-width: 0px; height: 0px; width: 186.422px;" class="text-center text-nowrap sorting" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1">
-                                                    <div class="dataTables_sizing" style="height: 0px; overflow: hidden;">Remarks</div>
-                                                </th>
-                                            </tr>
-                                        </thead>
-                                        <div id="leave-requests-container">
-                                        <tbody class="text-primary text-sm">
-                                        </tbody>
-                                        </div>
-                                    
-                                    </table>
-                                </div>
+    <div id="LeaveHistoryTable_wrapper" class="dataTables_wrapper form-inline dt-bootstrap no-footer">
+        <div id="LeaveHistoryTable_filter" class="dataTables_filter">
+            <label>Search:<input type="search" class="form-control input-sm" placeholder="" aria-controls="LeaveHistoryTable"></label>
+        </div>
+        <div class="dataTables_scroll">
+            <div class="dataTables_scrollHead" style="overflow: hidden; position: relative; border: 0px; width: 100%;">
+                <div class="dataTables_scrollHeadInner" style="box-sizing: content-box; width: 1197.7px; padding-right: 0px;">
+                    <table class="table table-striped table-bordered dataTable no-footer" tabindex="0" style="width: 1197.7px; padding: 0px; margin: 0px; overflow: auto;">
+                        <thead>
+                            <tr class="text-danger" style="font-weight:bold">
+                                <th style="width: 0px;" class="sorting sorting_asc" tabindex="0" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1" aria-sort="ascending"></th>
+                                <th style="width: 45.8125px; font-size:75%;" class="text-center text-nowrap sorting" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1">Leave Id</th>
+                                <th style="width: 55.2188px; font-size:75%;" class="text-center text-nowrap sorting" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1">Visit Place</th>
+                                <th style="width: 75.8438px; font-size:75%;" class="text-center text-nowrap sorting" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1">Reason</th>
+                                <th style="width: 75.4062px; font-size:75%;" class="text-center text-nowrap sorting" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1">LeaveType</th>
+                                <th style="width: 110.656px; font-size:75%;" class="text-center text-nowrap sorting" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1">From</th>
+                                <th style="width: 110.656px; font-size:75%;" class="text-center text-nowrap sorting" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1">To</th>
+                                <th style="width: 211.688px; font-size:75%;" class="text-center text-nowrap sorting" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1">Status</th>
+                                <th style="width: 186.422px; font-size:75%;" class="text-center text-nowrap sorting" aria-controls="LeaveHistoryTable" rowspan="1" colspan="1">Remarks</th>
+                            </tr>
+                        </thead>
+                    </table>
+                </div>
+            </div>
+            <div class="dataTables_scrollBody" style="position: relative; overflow: auto; width: 100%;">
+                <table id="LeaveHistoryTable" class="table table-striped table-bordered dataTable no-footer" tabindex="0" style="width: 100%; padding: 0px; margin: 0px; overflow: auto" aria-describedby="LeaveHistoryTable_info">
+                    <tbody class="text-primary text-sm" id="leave-requests-container">
+                        <!-- Dynamic rows will be inserted here -->
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
                                 <script>
                                     async function fetchLeaveRequests() {
                                         try {
