--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
                                     const createCell = (text, class1, class2) => {
                                         const td = document.createElement('td');
                                         td.textContent = text;
-                                        td.classList.add(text-primary, text-nowrap); // Add classes for styling
+                                        td.classList.add('text-primary', 'text-nowrap'); // Add classes for styling
                                         return td;
                                     };
                                     
