--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head>
+e<html><head>
     
 
     <meta charset="UTF-8">
@@ -18,7 +18,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE-Edge">
 
 
-    <link rel="stylesheet" type="text/css" href="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://vtop.vitbhopal.ac.in/vtop/get/bs/css/1">
     <link rel="stylesheet" type="text/css" href="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/bootstrap3-iso.css">
         <link rel="stylesheet" type="text/css" href="https://vtop.vitbhopal.ac.in/vtop/get/ic/css/1">
         <link rel="stylesheet" type="text/css" href="https://vtop.vitbhopal.ac.in/vtop/get/ic/css/2">
