--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <!-- <a class="navbar-brand VITLogoStyle px-0 mx-0 text-light" href="javacript:void(0);"><span
                     class="h1 fw-bold">VIT</span>
             </a> -->
-            <!-- <span class="navbar-text px-0 px-sm-2 mx-0 mx-sm-1 text-light">(Bhopal Campus)</span> -->e
+            <!-- <span class="navbar-text px-0 px-sm-2 mx-0 mx-sm-1 text-light">(Bhopal Campus)</span> -->
 
             <!-- Button -->
             <button
