--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
             }
         </style>
 
+        <style>
+            td {
+                color:red;
+                font-size:85%;
+            }
+        </style>
+
 
         <style>
             /* Optional: Style to ensure consistent appearance */
