--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="robots" content="NOODP,NOYDIR">
     <meta name="keywords" content=" vtop ">
     <meta name="robots" content="index, follow">
-    <link rel="icon" type="image/png" href="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/favicon.ico">
+    <link rel="icon" type="image/png" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/favicon.ico">
     <meta http-equiv="cache-control" content="max-age=0">
     <meta http-equiv="cache-control" content="no-cache">
     <meta http-equiv="expires" content="0">
@@ -19,16 +19,16 @@
 
 
     <link rel="stylesheet" type="text/css" href="https://vtop.vitbhopal.ac.in/vtop/get/bs/css/1">
-    <link rel="stylesheet" type="text/css" href="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/bootstrap3-iso.css">
+    <link rel="stylesheet" type="text/css" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/bootstrap3-iso.css">
         <link rel="stylesheet" type="text/css" href="https://vtop.vitbhopal.ac.in/vtop/get/ic/css/1">
         <link rel="stylesheet" type="text/css" href="https://vtop.vitbhopal.ac.in/vtop/get/ic/css/2">
-        <link rel="stylesheet" type="text/css" href="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/1">
+        <link rel="stylesheet" type="text/css" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/1">
         <link rel="stylesheet" type="text/css" href="https://vtop.vitbhopal.ac.in/vtop/get/bs/css/2">
-        <link rel="stylesheet" type="text/css" href="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/menu.css" />
-        <link rel="stylesheet" type="text/css" href="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/AdminLteCompatibility.css" />
-        <link rel="stylesheet" type="text/css" href="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/scrollableTable.css" />
-        <link rel="stylesheet" type="text/css" href="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/VTop.css" />
-        <link rel="stylesheet" type="text/css" href="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/font-awesome.css" />
+        <link rel="stylesheet" type="text/css" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/menu.css" />
+        <link rel="stylesheet" type="text/css" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/AdminLteCompatibility.css" />
+        <link rel="stylesheet" type="text/css" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/scrollableTable.css" />
+        <link rel="stylesheet" type="text/css" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/VTop.css" />
+        <link rel="stylesheet" type="text/css" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/font-awesome.css" />
         <link href="https://db.onlinewebfonts.com/c/15626bb7400b3ae5144e6509325f1d60?family=Daytona+W01+Condensed+Semibold" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -114,7 +114,7 @@
                 <span class="text-light h4">☰ </span>
             </button>
             <a class="navbar-brand px-0 pe-sm-1 mx-0 mx-sm-1" href="javacript:void(0);">
-                <img src="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/VITLogoEmblem.png" class="img-responsive VITEmblem" alt="">
+                <img src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/VITLogoEmblem.png" class="img-responsive VITEmblem" alt="">
             </a>
             <!-- <a class="navbar-brand VITLogoStyle px-0 mx-0 text-light" href="javacript:void(0);"><span
                     class="h1 fw-bold">VIT</span>
@@ -140,7 +140,7 @@
         <strong class="mx-auto fw-bold text-light bg-danger"></strong>
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item d-none d-sm-inline-block">
-            <img src="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/24BCG10055.png" class="img-circle img_icon_size" alt="User Image">
+            <img src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/24BCG10055.png" class="img-circle img_icon_size" alt="User Image">
         </li>
         <li class="nav-item dropdown d-none d-sm-inline-block">
             <a class="nav-link dropdown-toggle text-light" href="javascript:void(0);" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -161,7 +161,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item disabled text-center  d-block d-sm-none"><img src=https://ganja-spec.github.io/vtop.vitbhopal.ac.in/24BCG10055.png" class="img-circle img_stamp_size" alt="User Image"></li>
+                    <li class="nav-item disabled text-center  d-block d-sm-none"><img src=https://drkdnte.github.io/vtop.vitbhopal.ac.in/24BCG10055.png" class="img-circle img_stamp_size" alt="User Image"></li>
                     <li class="nav-item disabled text-center d-block d-sm-none"><span class="dropdown-item text-light"></span></li>
                     <li class="nav-item disabled text-center d-block d-sm-none">
                         <span class="navbar-text text-light small fw-bold">24BCG10055 (STUDENT)</span>
@@ -515,20 +515,20 @@
 
 </style>
 
-<link rel="stylesheet" href="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/daterangepicker.css">
-<link rel="stylesheet" href="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/bootstrap-timepicker.min.css">
-<link rel="stylesheet" href="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/bootstrap-datetimepicker.css">
-<link rel="stylesheet" href="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/jquery.dataTables.min.css">
-<link rel="stylesheet" href="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/datatables.css">
-<link rel="stylesheet" href="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/datepicker3.css">
+<link rel="stylesheet" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/daterangepicker.css">
+<link rel="stylesheet" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/bootstrap-timepicker.min.css">
+<link rel="stylesheet" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/bootstrap-datetimepicker.css">
+<link rel="stylesheet" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/jquery.dataTables.min.css">
+<link rel="stylesheet" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/datatables.css">
+<link rel="stylesheet" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/datepicker3.css">
 
-<script src="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/app.js"></script>
-<script src="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/moment.js"></script>
-<script src="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/bootstrap-timepicker.min.js"></script>
-<script src="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/jquery.dataTables.min.js"></script>
-<script src="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/datatable.bootstrap.min.js"></script>
-<script src="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/datatables.js"></script>
-<script src="https://ganja-spec.github.io/vtop.vitbhopal.ac.in/daterangepicker.js"></script>
+<script src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/app.js"></script>
+<script src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/moment.js"></script>
+<script src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/bootstrap-timepicker.min.js"></script>
+<script src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/jquery.dataTables.min.js"></script>
+<script src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/datatable.bootstrap.min.js"></script>
+<script src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/datatables.js"></script>
+<script src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/daterangepicker.js"></script>
 
 
 
