--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
             <!-- <span class="navbar-text px-0 px-sm-2 mx-0 mx-sm-1 text-light">(Bhopal Campus)</span> -->
 
             <!-- Button -->
+            <a class="navbar-text" href="javascript:void(0);" onclick="javascript:home();">
+                <i class="bi bi-house-door text-light ps-sm-3 h2" aria-hidden="true"></i>
+            </a>
             <button
     id="navbar-toggler"
     class="navbar-toggler mx-0 px-0 collapsed"
