--- a/index.html
+++ b/index.html
@@ -1503,7 +1503,7 @@
                         <span class="h6 fw-bold">Loading... Please Wait</span>
                     </div>
                     <div class="card-body">
-                        <img src="assets/gif/ajax-loader_bert.gif" class="img-fluid">
+                        <img src="/ajax-loader_bert.gif" class="img-fluid">
                     </div>
                 </div>
             </div>
