--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<html><head>
+<html><head>
     
 
     <meta charset="UTF-8">
@@ -20,7 +20,7 @@
 
         <link rel="stylesheet" type="text/css" href="https://vtop.vitbhopal.ac.in/vtop/get/bs/css/1">
         <link rel="stylesheet" type="text/css" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/bootstrap3-iso.css">
-        <link rel=”stylesheet” href=”https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css” />">
+        <link rel=”stylesheet” href=”https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css” />
         <link rel="stylesheet" type="text/css" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/font-awesome.css">
         <link rel="stylesheet" type="text/css" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/1">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.5.3/css/bootstrapValidator.css">
@@ -109,7 +109,7 @@
                     <span class="text-light h4">☰ </span>
                 </button>
                 <a class="navbar-brand px-0 pe-sm-1 mx-0 mx-sm-1" href="javacript:void(0);">
-                    <img src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/VITLogoEmblem.png" class="img-responsive VITEmblem" alt="">
+                    <img src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/VITLogoEmblem.png" class="img-responsive VITEmblem" alt=">
                 </a>
                 <!-- <a class="navbar-brand VITLogoStyle px-0 mx-0 text-light" href="javacript:void(0);"><span
                         class="h1 fw-bold">VIT</span>
