--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" type="text/javascript"></script>
 	<script src="https://cdn.datatables.net/2.1.8/js/dataTables.min.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="tps://cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css">
+
+	<script>
+		$(document).ready(function() {
+		    var table = $('#LeaveHistoryTable').DataTable({
+		        "dom": 'rtip',
+		        "scrollX": true,
+		        "autoWidth": false
+		    });
+		
+		    $('#dt-search-0').on('keyup', function() {
+		        table.search(this.value).draw();
+		    });
+		});
+	</script>
 	
         <style>
             body {
