--- a/index.html
+++ b/index.html
@@ -36,25 +36,18 @@
 	<script src="https://cdn.datatables.net/2.1.8/js/dataTables.min.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="tps://cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css">
 
-	<script>
-		$(document).ready(function() {
-		    var table = $('#LeaveHistoryTable').DataTable({
-		        "dom": 'rtip',
-		        "scrollX": true,
-		        "autoWidth": false
-		    });
-		
-		    $('#dt-search-0').on('keyup', function() {
-		        table.search(this.value).draw();
-		    });
-		});
-	</script>
+	<style>
+	    #LeaveHistoryTable_filter {
+	        display: none;
+	    }
+	</style>
 	
-        <style>
-            body {
-            font-family: 'Open Sans', Arial, sans-serif;
-            }
-        </style>
+		
+	        <style>
+	            body {
+	            font-family: 'Open Sans', Arial, sans-serif;
+	            }
+	</style>
 
 
         <style>
