--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
 	<link rel="stylesheet" type="text/css" href="tps://cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css">
 
 	<style>
-	    #LeaveHistoryTable_filter {
+	    .dt-search {
 	        display: none;
 	    }
 	</style>
+
 	
 		
 	<style>
