--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" type="text/javascript"></script>
 	<script src="https://cdn.datatables.net/2.1.8/js/dataTables.min.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="tps://cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css">
+	<link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
 
 	<style>
 	    .dt-search {
