--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 	<script src="https://cdn.datatables.net/2.1.8/js/dataTables.min.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="tps://cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
-
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 	<style>
 	    .dt-search {
