--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <link href="https://db.onlinewebfonts.com/c/15626bb7400b3ae5144e6509325f1d60?family=Daytona+W01+Condensed+Semibold" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
-
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         
         <style>
             body {
