--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" type="text/css" href="https://vtop.vitbhopal.ac.in/vtop/get/bs/css/1">
     <link rel="stylesheet" type="text/css" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/bootstrap3-iso.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/bootstrap-icons.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="https://vtop.vitbhopal.ac.in/vtop/get/ic/css/1">
         <link rel="stylesheet" type="text/css" href="https://vtop.vitbhopal.ac.in/vtop/get/ic/css/2">
         <link rel="stylesheet" type="text/css" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/1">
