--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
             body {
             font-family: 'Open Sans', Arial, sans-serif;
             }
+            .dt-search {
+            display: none; /* Hides the custom search box */
+            }
+            #LeaveHistoryTable_info {
+            display: none; /* Hides the info display */
+            }
+            
         </style>
 
         <style>
