--- a/index.html
+++ b/index.html
@@ -1325,21 +1325,21 @@
     </div>
 
 
-    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in//5"></script>         <!--moment.js -->
-    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in//2"></script> <!-- jquery hotkey-->
-    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in//3"></script> <!--  block ui -->
-    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in//4"></script> <!--  jquery ui -->
-    <script type="text/javascript" src="/get/bs/js/3"></script> <!-- bootstrap.bundle min 5.0.1 -->
+    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/5"></script>         <!--moment.js -->
+    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/2"></script> <!-- jquery hotkey-->
+    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/3"></script> <!--  block ui -->
+    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/4"></script> <!--  jquery ui -->
+    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/bootstrap.bundle.min.js"></script> <!-- bootstrap.bundle min 5.0.1 -->
     <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in//custom-bootstrap.js"></script>
 
 
 
-    <script type="text/javascript" src="/get/bs/js/1"></script>  <!-- bootstrapvalidator.js -->
-    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in//vtop-validation.js"></script>
-    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in//vit-custom.js"></script>
-    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in//validate2.js"></script>
-    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in//pdf.js"></script>
-    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in//app.js"></script>
+    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/bootstrapValidator.js"></script>  <!-- bootstrapvalidator.js -->
+    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/vtop-validation.js"></script>
+    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/vit-custom.js"></script>
+    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/validate2.js"></script>
+    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/pdf.js"></script>
+    <script type="text/javascript" src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/app.js"></script>
 
 
 
