--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
 
 <script src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/app.js"></script>
 <script src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/moment.js"></script>
-<script src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/bootstrap-timepicker.min.js"></script>
+<script src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/bootstrap-datetimepicker.min.js"></script>
 <script src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/jquery.dataTables.min.js"></script>
 <script src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/datatable.bootstrap.min.js"></script>
 <script src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/datatables.js"></script>
