--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             body {
             font-family: 'Open Sans', Arial, sans-serif;
             }
-            .dt-search {
+            .dt-search, .dt-paging {
             display: none; /* Hides the custom search box */
             }
             #LeaveHistoryTable_info {
