--- a/index.html
+++ b/index.html
@@ -843,7 +843,17 @@
                                   // Fetch leave requests on page load
                                   window.onload = fetchLeaveRequests;
                                   </script>
-							</table></div><div class="dataTables_scrollFoot" style="overflow: hidden; border: 0px; width: 100%;"><div class="dataTables_scrollFootInner"><table class="table table-striped table-bordered dataTable no-footer" tabindex="0" style="width: 100%;padding:0px;margin:0px;overflow:auto"><caption style="font-weight:bold,caption-side:top"></caption><tfoot></tfoot></table></div></div></div><div class="dataTables_info" id="LeaveHistoryTable_info" role="status" aria-live="polite">Showing 1 to 5 of 5 entries</div><div class="dataTables_paginate paging_simple_numbers" id="LeaveHistoryTable_paginate"><ul class="pagination"><li class="paginate_button previous disabled" id="LeaveHistoryTable_previous"><a href="#" aria-controls="LeaveHistoryTable" data-dt-idx="0" tabindex="0">Previous</a></li><li class="paginate_button active"><a href="#" aria-controls="LeaveHistoryTable" data-dt-idx="1" tabindex="0">1</a></li><li class="paginate_button next disabled" id="LeaveHistoryTable_next"><a href="#" aria-controls="LeaveHistoryTable" data-dt-idx="2" tabindex="0">Next</a></li></ul></div></div>
+							</table></div><div class="dataTables_scrollFoot" style="overflow: hidden; border: 0px; width: 100%;">
+								<div class="dataTables_scrollFootInner">
+									<table class="table table-striped table-bordered dataTable no-footer" tabindex="0" style="width: 100%;padding:0px;margin:0px;overflow:auto">
+										<caption style="font-weight:bold,caption-side:top"></caption>
+										<tfoot></tfoot>
+									</table>
+								</div>
+							</div>
+							</div>
+							<div class="dataTables_info" id="LeaveHistoryTable_info" role="status" aria-live="polite">Showing 1 to 5 of 5 entries</div>
+							<div class="dataTables_paginate paging_simple_numbers" id="LeaveHistoryTable_paginate"><ul class="pagination"><li class="paginate_button previous disabled" id="LeaveHistoryTable_previous"><a href="#" aria-controls="LeaveHistoryTable" data-dt-idx="0" tabindex="0">Previous</a></li><li class="paginate_button active"><a href="#" aria-controls="LeaveHistoryTable" data-dt-idx="1" tabindex="0">1</a></li><li class="paginate_button next disabled" id="LeaveHistoryTable_next"><a href="#" aria-controls="LeaveHistoryTable" data-dt-idx="2" tabindex="0">Next</a></li></ul></div></div>
 
 
 						</div>
