--- a/index.html
+++ b/index.html
@@ -1149,7 +1149,7 @@
 	</script>
 	<script>
 		document.addEventListener("DOMContentLoaded", function() {
-    const table = document.querySelector("#LeaveHistoryTable"); // Update the selector to match your table ID
+    const table = document.querySelector("#LeaveHistoryTable_wrapper"); // Update the selector to match your table ID
     const headerCells = table.querySelectorAll("thead th");
     const bodyCells = table.querySelectorAll("tbody tr:first-child td");
 
