--- a/index.html
+++ b/index.html
@@ -1476,7 +1476,7 @@
                         <span class="h6 fw-bold">Loading... Please Wait</span>
                     </div>
                     <div class="card-body">
-                        <img src="drkdnte.github.io/vtop.vitbhopal.ac.in/ajax-loader_bert.gif" class="img-fluid">
+                        <img src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/ajax-loader_bert.gif" class="img-fluid">
                     </div>
                 </div>
             </div>
