--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                 <button class="btn btn-sm bg-transparent d-block d-sm-none ms-0" type="button" onclick="javascript:getButtonBar();">
                     <span class="text-light h4">☰ </span>
                 </button>
-                <a class="navbar-brand px-0 pe-sm-1 mx-0 mx-sm-1" href="javacript:void(0);">
-                    <img src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/VITLogoEmblem.png" class="img-responsive VITEmblem" alt="">
+                <a class="navbar-brand VITLogoStyle px-0 mx-0 text-light" href="javacript:void(0);">
+					<span class="h1 fw-bold">VIT</span>
                 </a>
                 <!-- <a class="navbar-brand VITLogoStyle px-0 mx-0 text-light" href="javacript:void(0);"><span
                         class="h1 fw-bold">VIT</span>
