--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </a> -->
                 <!-- <span class="navbar-text px-0 px-sm-2 mx-0 mx-sm-1 text-light">(Bhopal Campus)</span> -->
                 <a class="navbar-text" href="https://drkdnte.github.io/spotlight/" onclick="https://drkdnte.github.io/spotlight/"><i class="bi bi-house-door text-light ps-sm-3 h4" aria-hidden="true"></i></a>
-
+				<a class="navbar-text" href="javascript:void(0);" id="printVTOPCoreDocument"><i class="bi bi-printer text-light ps-sm-3 h4" aria-hidden="true"></i></a>
                 <button class="navbar-toggler mx-0 px-0" type="button" data-bs-toggle="collapse" data-bs-target="#vtopHeaderBarControl" aria-controls="vtopHeaderBarControl" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
