--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
 
 	<div class="small fortnightly trim">
 
-	    <div class="head-box col-sm-12">
+	    <div class="card-header primaryBorderTop">
 	       <h3 class="col-sm-10 trim"><b>Hostel Leave Request Screen </b></h3>
 	      <!--  <span class="col-sm-2"  th:include="layouts/Widgets :: HelpWidget('hostel','studentLeave')"></span> -->
      	</div>		
