--- a/index.html
+++ b/index.html
@@ -1,175 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
+<html>
+
+<head id="configHead">
     <meta charset="utf-8">
     <base href="https://vtop.vitbhopal.ac.in/vtop/">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>VIT Bhopal - VTOP</title>
+    <meta name="description" content="">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <meta charset="ISO-8859-1">
+    <meta name="description" content="vtop">
+    <meta name="robots" content="NOODP,NOYDIR">
+    <meta name="keywords" content=" vtop ">
+    <meta name="robots" content="index, follow">
+    <link rel="icon" type="image/png" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/favicon.ico">
+    <meta http-equiv="cache-control" content="max-age=0">
+    <meta http-equiv="cache-control" content="no-cache">
+    <meta http-equiv="expires" content="0">
+    <meta http-equiv="X-UA-Compatible" content="IE-Edge">
 
-    <!-- Original VTOP styles -->
+    <!-- Core CSS -->
+    <link rel="stylesheet" type="text/css" href="/vtop/get/bs/css/1">
     <link rel="stylesheet" type="text/css" href="/vtop/assets/css/bootstrap3-iso.css">
-    <link rel="stylesheet" type="text/css" href="/vtop/assets/css/menu.css">
-    <link rel="stylesheet" type="text/css" href="/vtop/assets/css/scrollableTable.css">
-    <link rel="stylesheet" type="text/css" href="/vtop/assets/css/VTop.css">
-    <link rel="stylesheet" type="text/css" href="/vtop/assets/css/AdminLteCompatibility.css">
+    <link href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/vtop/get/ic/css/1">
+    <link rel="stylesheet" type="text/css" href="/vtop/get/ic/css/2">
+    <link rel="stylesheet" type="text/css" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/1">
+    <link rel="stylesheet" type="text/css" href="/vtop/get/bs/css/2">
+    <link rel="stylesheet" type="text/css" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/menu.css">
+    <link rel="stylesheet" type="text/css" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/AdminLteCompatibility.css">
+    <link rel="stylesheet" type="text/css" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/scrollableTable.css">
+    <link rel="stylesheet" type="text/css" href="https://drkdnte.github.io/vtop.vitbhopal.ac.in/VTop.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
-    <!-- DataTables CSS -->
-    <link rel="stylesheet" href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css">
-
-    <!-- jQuery & DataTables -->
+    <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
-
-    <style>
-        /* Custom fixes for local rendering */
-        .card {
-            background: #fff;
-            border-radius: 10px;
-            padding: 20px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-            margin: 20px auto;
-        }
-        .card-header {
-            font-size: 18px;
-            font-weight: bold;
-            margin-bottom: 15px;
-            border-bottom: 1px solid #ddd;
-            padding-bottom: 10px;
-        }
-    </style>
+    <script type="text/javascript" src="/vtop/get/jq/js/1"></script>
 </head>
 
 <body class="overflow-auto" style="padding-top: 49px;">
 
-    <!-- Hidden authorized user -->
     <input type="hidden" name="authorizedIDX" id="authorizedIDX" value="24BCG10055">
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg py-0 navbar-light bg-light headerBackgroundColor fixed-top shadow" id="vtopHeader">
-        <div class="container-fluid ms-0 ps-2">
-            <button class="btn btn-sm bg-transparent d-none d-sm-block ms-0" type="button" onclick="getButtonBar();">
-                <span class="text-light h4">☰</span>
-            </button>
-            <a class="navbar-brand VITLogoStyle px-0 mx-0 text-light" href="javascript:void(0);">
-                <span class="h1 fw-bold">VIT</span>
-            </a>
-            <span class="navbar-text px-0 px-sm-2 mx-0 mx-sm-1 text-light">(Bhopal Campus)</span>
-            <a class="navbar-text" href="#"><i class="bi bi-house-door text-light ps-sm-3 h4"></i></a>
-            <a class="navbar-text" href="#"><i class="bi bi-printer text-light ps-sm-3 h4"></i></a>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12 trim vh-100 vw-100" id="page_outline">
+                <div id="page-holder">
 
-            <div class="collapse navbar-collapse" id="vtopHeaderBarControl">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item d-none d-sm-inline-block">
-                        <img src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/24BCG10055.png"
-                             class="img-circle img_icon_size" alt="User Image">
-                    </li>
-                    <li class="nav-item dropdown d-none d-sm-inline-block">
-                        <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown"
-                           role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <span class="navbar-text text-light small fw-bold">24BCG10055 (STUDENT)</span>
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-end headerBackgroundColor dropdownMenuBoxWidth"
-                            aria-labelledby="navbarDropdown">
-                            <li class="dropdown-item disabled text-center">
-                                <img src="https://drkdnte.github.io/vtop.vitbhopal.ac.in/24BCG10055.png"
-                                     class="img-circle img_stamp_size" alt="User Image">
-                            </li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li class="dropdown-item bg-transparent">
-                                <form class="text-center" method="post" action="/vtop/logout">
-                                    <div class="d-grid gap-2">
-                                        <button class="btn btn-success" type="submit">Sign out</button>
-                                    </div>
-                                </form>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Sidebar + Main content -->
-    <div class="hstack">
-        <!-- Sidebar -->
-        <div class="vh-100 btnBarColor bg-opacity-25 shadow d-none d-sm-block" id="sidePanel">
-            <!-- same sidebar items copied from original -->
-            <div class="btn-toolbar mx-1" role="toolbar">
-                <div class="btn-group-vertical" role="group">
-                    <!-- Example Menu Item -->
-                    <div class="btn-group dropend">
-                        <button type="button" class="btn btn-outline-primary p-1 border-0 text-dark SideBarMenuBtn"
-                                data-bs-toggle="dropdown">
-                            <i class="fa fa-home iconSpace"></i>
-                        </button>
-                        <div class="dropdown-menu border-0 py-0 shadow-lg dropdownMenuBoxWidth text-nowrap SideBarMenuDropDown">
-                            <div class="fw-bold h6 py-3 text-center menuHeaderColor menuHeaderFontStyle">Hostels</div>
-                            <a class="dropdown-item menuFontStyle systemBtnMenu" href="#">
-                                <i class="fa fa-dot-circle-o iconSpace"></i> Leave Request
+                    <!-- Navbar -->
+                    <nav class="navbar navbar-expand-lg py-0 navbar-light bg-light headerBackgroundColor fixed-top shadow" id="vtopHeader">
+                        <div class="container-fluid ms-0 ps-2">
+                            <button class="btn btn-sm bg-transparent d-none d-sm-block ms-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#expandedSideBar">
+                                <span class="text-light h4">&#9776; </span>
+                            </button>
+                            <button class="btn btn-sm bg-transparent d-block d-sm-none ms-0" type="button" onclick="javascript:getButtonBar();">
+                                <span class="text-light h4">&#9776; </span>
+                            </button>
+                            <a class="navbar-brand VITLogoStyle px-0 mx-0 text-light" href="javacript:void(0);">
+                                <span class="h1 fw-bold">VIT</span>
                             </a>
+                            <span class="navbar-text px-0 px-sm-2 mx-0 mx-sm-1 text-light">(Bhopal Campus)</span>
+                            <a class="navbar-text" href="javascript:void(0);" onclick="javascript:home();"><i class="bi bi-house-door text-light ps-sm-3 h4"></i></a>
+                            <a class="navbar-text" href="javascript:void(0);" id="printVTOPCoreDocument"><i class="bi bi-printer text-light ps-sm-3 h4"></i></a>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+                    </nav>
 
-        <!-- Main content card -->
-        <div class="container-fluid mt-5 pt-4">
-            <div class="card">
-                <div class="card-header">Hostel Leave Request Screen</div>
-                <div class="card-body">
-                    <button class="btn btn-info">Leave Request</button>
-                    <button class="btn btn-info">Leave Status</button>
-                    <button class="btn btn-info">Leave History</button>
-
-                    <hr>
-
-                    <table id="leaveTable" class="table table-bordered table-striped mt-3">
-                        <thead>
-                        <tr>
-                            <th>Leave Id</th>
-                            <th>Visit Place</th>
-                            <th>Reason</th>
-                            <th>Leave Type</th>
-                            <th>From</th>
-                            <th>To</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td>L2119675</td>
-                            <td>Bhopal</td>
-                            <td>Exam in Bhopal</td>
-                            <td>OUTING</td>
-                            <td>01-DEC-2024 06:00 AM</td>
-                            <td>01-DEC-2024 09:00 AM</td>
-                        </tr>
-                        </tbody>
-                    </table>
                 </div>
             </div>
         </div>
     </div>
-
-    <script>
-        $(document).ready(function () {
-            $('#leaveTable').DataTable();
-        });
-
-        function getButtonBar() {
-            var btnBarElem = document.getElementById("sidePanel");
-            if (btnBarElem.classList.contains("d-none")) {
-                btnBarElem.classList.remove("d-none");
-            } else {
-                btnBarElem.classList.add("d-none");
-            }
-        }
-    </script>
 </body>
 </html>
