--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
 
 
 
-<div class="small fortnightly trim container-fluid mt-5 pt-4">
+<div class="small fortnightly trim">
   <div class="card shadow-sm rounded">
     <div class="card-header">Hostel Leave Request Screen</div>
     <div class="card-body">
